# chrisIM_rust

./: .dockerignore  .env  .env.production  .env.staging  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.telemetry.yml
.github/workflows/: main.yml
api-gateway/: Cargo.toml  README.md
api-gateway/config/: gateway.yaml
api-gateway/src/: lib.rs  main.rs
api-gateway/src/api_doc/: api_docs.rs  mod.rs
api-gateway/src/api_utils/: mod.rs
api-gateway/src/api_utils/ip_region/: ip_location.rs  mod.rs
api-gateway/src/auth/: controller.rs  jwt.rs  middleware.rs  mod.rs
api-gateway/src/circuit_breaker/: mod.rs
api-gateway/src/config/: auth_config.rs  mod.rs  rate_limit_config.rs  routes_config.rs
api-gateway/src/metrics/: mod.rs
api-gateway/src/middleware/: mod.rs  request_logger.rs
api-gateway/src/proxy/: grpc_client.rs  http_client.rs  mod.rs  service_proxy.rs  utils.rs
api-gateway/src/proxy/grpc_clients/: mod.rs  user_client.rs
api-gateway/src/proxy/services/: common.rs  friend_service.rs  group_service.rs  mod.rs  user_service.rs
api-gateway/src/rate_limit/: mod.rs
api-gateway/src/router/: mod.rs
api-gateway/src/tracing/: mod.rs
auth-service/src/: main.rs
auth-service/src/repository/: token_repository.rs
auth-service/src/service/: auth_service.rs
cache/: Cargo.toml
cache/src/: lib.rs
cache/src/redis/: mod.rs
common/: Cargo.toml  build.rs
common/examples/: client_macro_demo.rs  config_loader.rs  grpc_client_demo.rs
common/proto/: friend.proto  group.proto  messages.proto  user.proto
common/src/: config.rs  error.rs  lib.rs  logging.rs  models.rs  proto.rs  service.rs  service_registry.rs  utils.rs
common/src/configs/: auth_config.rs  database_config.rs  gateway_config.rs  log_config.rs  mod.rs  oss_config.rs  routes_config.rs  sms_config.rs  telemetry_config.rs
common/src/grpc/: interceptor.rs  mod.rs
common/src/grpc_client/: base.rs  client_factory.rs  friend_client.rs  group_client.rs  macros.rs  mod.rs  user_client.rs
common/src/service_discovery/: mod.rs  service_fetcher.rs  tonic_service_discovery.rs
common/src/service_register_center/: mod.rs  typos.rs
common/src/service_register_center/consul/: mod.rs
common/src/sms/: mod.rs  sms_service.rs  tencent.rs
common/src/sqlx_tester/: mod.rs
common/src/types/: msg.rs
common/src/validation/: friend.rs  group.rs  middleware.rs  mod.rs  user.rs
config/: README.md  config.yaml  gateway.yaml  redis.conf
config/filebeat/: filebeat.yml
config/logstash/: logstash.conf
config/nginx/: staging.conf
config/services/: friend-service.yaml  user-service.yaml
docs/: 20250516_update_cml_DDL.sql  250512_update_DDL.sql  250521_add_cml_DDL.sql  DDL.sql  README-telemetry.md  ci-cd-setup.md  kubernetes-deployment.md  logging-guide.md  server_config.md
friend-service/: Cargo.toml
friend-service/src/: main.rs
friend-service/src/model/: friendship.rs  mod.rs
friend-service/src/repository/: friendship_repository.rs  mod.rs
friend-service/src/service/: friend_service.rs  friend_service_advanced.rs  friend_service_example.rs  friend_service_with_validation.rs  friend_validation_service.rs  mod.rs
group-service/: Cargo.toml
group-service/src/: main.rs
group-service/src/model/: group.rs  member.rs
group-service/src/repository/: group_repository.rs  member_repository.rs  mod.rs
group-service/src/service/: group_service.rs
k8s/: api-gateway.yaml  configmap.yaml  ingress.yaml  k8s-deploy.sh  monitoring.yaml  namespace.yaml  secrets.yaml
msg-gateway/: Cargo.toml
msg-gateway/src/: client.rs  main.rs  manager.rs  rpc.rs  ws_server.rs
msg-gateway/tests/: rpc_test.rs
msg-server/: Cargo.toml
msg-server/src/: consumer.rs  lib.rs  main.rs  productor.rs
msg-server/src/pusher/: mod.rs  service.rs
msg-storage/: Cargo.toml
msg-storage/src/: lib.rs  main.rs  message.rs  seq.rs
msg-storage/src/mongodb/: message.rs  mod.rs  utils.rs
msg-storage/src/mongodb/test/: mod.rs
msg-storage/src/postgres/: message.rs  mod.rs  seq.rs
msg-storage/src/postgres/test/: mod.rs
oss/src/: lib.rs
scripts/: deploy-remote.sh  generate-docs.sh  init-db.sql  serve-docs.sh
scripts/local/: deploy.sh
scripts/remote/: deploy-remote.sh  install-docker-compose.sh  install-docker-opencloudos.sh  install-docker.sh  install-gitlab.sh  server-setup.sh  user-management.sh
user-service/: Cargo.toml
user-service/src/: main.rs
user-service/src/model/: mod.rs  user.rs  user_config.rs
user-service/src/repository/: mod.rs  user_config_repository.rs  user_repository.rs
user-service/src/service/: user_service.rs
