[package]
name = "api-gateway"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
axum = { workspace = true, features = ["macros"] }
hyper = { version = "1.6.0", features = ["full"] }
tower = { workspace = true, features = ["full"] }
tower-http = { workspace = true, features = ["full", "cors", "trace", "timeout", "limit", "auth"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }
reqwest = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true, features = ["derive"] }
http-body-util = { version = "0.1" }
axum-server = { workspace = true, features = ["tls-rustls"] }
rand = { workspace = true, features = ["small_rng"] }
flate2 = "1.1.1"

# 限流相关
tower_governor = "0.7.0"
governor = "0.9.0"

# 监控相关
prometheus = { version = "0.13", features = ["process"] }
metrics = "0.24.1"
metrics-exporter-prometheus = "0.16.2"

# API文档
utoipa = { version = "4.1.0", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "5.0.0", features = ["axum"] }

# JWT认证
jwt-authorizer = "0.15.0"

once_cell = "1.19.0"
# 内存缓存
parking_lot = "0.12.1"

# 其他依赖
regex = "1.9.5"
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
prost-types = "0.12.6"
