[package]
name = "common"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { workspace = true }
axum = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
bincode = { workspace = true }
redis = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
jsonwebtoken = { workspace = true }
dotenv = { workspace = true }
async-trait = { workspace = true }
config = { workspace = true, features = ["yaml", "toml", "json"] }
reqwest = { workspace = true, features = ["json"] }
bcrypt = { workspace = true }
aws-sdk-s3 = {workspace = true }
rand = { workspace = true }
# 配置监听
notify = { version = "8.0.0", optional = true }
mongodb = "2.8.2"

# 链路追踪和日志 
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
# 分布式链路追踪依赖，可选
opentelemetry = { version = "0.20", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.13", features = ["http-proto", "tonic"] }
tracing-opentelemetry = "0.20"
tower = "0.4.13"

[features]
default = []
dynamic-config = ["notify"]
telemetry = []

[build-dependencies]
tonic-build = "0.11.0"
