[package]
name = "msg-gateway"
version = "0.1.0"
edition = "2021"


[dependencies]
common = { path = "../common" }
cache = { path = "../cache" }

bincode = "1.3.3"
dashmap = "5.5.3"
futures = "0.3.30"
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
axum = { workspace = true, features = ["macros", "ws"] }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
jsonwebtoken = { workspace = true }
anyhow = { workspace = true }

