[package]
name = "msg-server"
version = "0.1.0"
edition = "2021"


[dependencies]
common = { path = "../common" }
cache = { path = "../cache" }

async-trait = "0.1.80"
bincode = "1.3.3"
chrono = { version = "0.4.31", features = ["serde"] }
dashmap = "5.5.3"
futures = "0.3.30"
nanoid = "0.4.0"
# 使用工作区定义的版本，默认不启用任何构建特性
rdkafka = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tonic = { workspace = true }
tonic-health = "0.11.0"
tower = { workspace = true, features = ["discover"]}
tracing = { workspace = true }
anyhow = "1.0.98"

[features]
static = ["rdkafka/cmake-build"]
dynamic = ["rdkafka/dynamic-linking"]
