[package]
name = "msg-storage"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { version = "0.1.0", path = "../common" }
cache = { version = "0.1.0", path = "../cache" }

async-trait = "0.1.79"
bson = { version = "2.9.0", features = ["chrono-0_4"] }
chrono = { version = "0.4.31", features = ["serde"] }
futures = "0.3.30"
mongodb = "2.8.2"
sqlx = { workspace = true, features = [
    "runtime-tokio-rustls",
    "postgres",
    "chrono",
] }
tokio = { version = "1.36.0", features = ["full"] }
tonic = { version = "0.11.0", features = ["gzip"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
