[package]
name = "user-service"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common", features = ["dynamic-config"]}
tokio = { workspace = true }
tonic = { workspace = true }
tonic-reflection = { workspace = true }
serde = { workspace = true }
sqlx = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
prost-types = { workspace = true }
redis = { workspace = true }
